added google maps to intrests.html

--- a/interests.html
+++ b/interests.html
@@ -195,9 +195,13 @@
         </div>
 
     </footer>
-    <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDDHHyac2SiOYPNYxXMK7rqJjnB8nCaaxE&callback=initMap"></script>
-    <script src="assets/js/maps.js"></script>
+       
+   
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBTrAa-L2dK455fXCr45PK3qFUyeWUgdq0&callback=initMap&v=weekly"
+      defer
+    ></script>
+    <script src="js/maps.js"></script>
 </body>
 
 </html>
